--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-copy": "^1.0.0",
+    "gulp-eslint": "^4.0.0",
     "gulp-jade": "^1.1.0",
     "gulp-jasmine": "^2.4.2",
     "gulp-jslint": "^1.0.10",
